<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mis recetas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registro</string>
    <string name="login_msg">Iniciá sesión</string>
    <string name="register_msg">O registrate</string>
    <string name="or">– o –</string>
    <string name="user_label">Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="email">Correo electrónico</string>
    <string name="create_account_title">Crear una cuenta en Mis Recetas</string>
    <string name="cancel">Cancelar</string>
    <string name="choose_password_title">Elige una contraseña</string>
    <string name="repeat_password_title">Repite la contraseña</string>
    <string name="welcome_back_title">Bienvenido de nuevo a Mis Recetas. Ingresá tus credenciales para continuar.</string>
    <string name="retry">Reintentar</string>
    <string name="welcome_user">Bienvenid@ %s</string>
    <string name="sign_in_message">Tenés que iniciar sesión o crear una cuenta para continuar.</string>
    <string name="exit_app">Salir</string>
    <string name="continue_login">Continuar</string>
    <string name="non_user_data_compilation_msg" tools:ignore="Typos">Mis Recetas no te solicitará ningún tipo información personal en ningún momento.</string>
    <string name="anonymous">Anónimo</string>
    <string name="hard">Dificil</string>
    <string name="easy">Fácil</string>
    <string name="normal">Normal</string>
    <string name="ingredients_title">Ingredientes</string>
    <string name="author_title" tools:ignore="Typos">"Autor: "</string>
    <string name="instructions_title">Instrucciones</string>
    <string name="ingredient_placeholder">%d %s de %s</string>
    <string name="description">Descripción</string>
    <string name="total_time">Tiempo total</string>
    <string name="helper_text_total_time">Cuánto tiempo lleva</string>
    <string name="suffix_total_time">" minutos"</string>
    <string name="total_servings">Porciones</string>
    <string name="helper_text_total_servings">Para cuántas personas</string>
    <string name="suffix_total_servings">" porciones"</string>
    <string name="instructions_not_added_yet">Aun no se agregaron instrucciones</string>
    <string name="ingredients_not_added_yet">Aun no se agregaron ingredientes</string>
    <string name="compulsatory_field">Este campo es obligatorio</string>
    <string name="must_add_at_least_one_ingredient">Tenés que añadir un ingrediente por lo menos</string>
    <string name="must_add_at_least_one_instruction">Tenés que añadir un paso por lo menos</string>
    <string name="save">Guardar</string>
    <string name="add_item">Agregar</string>
    <string name="ingredient_hint">Nuevo ingrediente</string>
    <string name="item_removed">Se eliminó %s</string>
    <string name="action_undo">Deshacer</string>
    <string name="ingredients">Ingredientes</string>
    <string name="instructions">Instrucciones</string>
    <string name="home">Inicio</string>
    <string name="recipe">Receta</string>
    <string name="add_recipe">Nueva receta</string>
    <string name="edit_recipe">Editar receta</string>
    <string name="ingredient_suggestion">Por ej.: 250 ml de agua</string>
    <string name="add_recipe_photo_image">Hacé click para agregar una imagen que caracterice esta receta</string>
    <string name="add_ingredient">Ingrediente</string>
    <string name="add_instruction">Paso</string>
    <string name="instruction_suggestion">Agregar el agua progresivamente, y mezclar hasta obtener una masa lisa y suave</string>
    <string name="current_step_placeholder">Paso %d</string>
    <string name="ingredient">Ingrediente</string>
    <string name="instruction">Paso</string>
    <string name="delete_instruction">Eliminar paso</string>
    <string name="delete_ingredient">Eliminar ingrediente</string>
    <string name="drag_ingredient">Arrastrar ingrediente</string>
    <string name="drag_instruction">Arrastrar paso</string>
    <string name="edit_recipe_image">Editar la imagen de la receta</string>
    <string name="recipe_photo">Foto de la receta</string>
    <string name="click_here_to_add_image">Clickeá para agregar una imagen</string>
    <string name="cancel_image_loading_content_description">Cancelar carga de imagen</string>
    <string name="delete_image_option">Eliminar imagen</string>
    <string name="add_edit_image_option">Aregar o editar imagen</string>
    <string name="error_getting_image">Ocurrió un error al obtener la imagen</string>
    <string name="edit">Editar</string>
    <string name="failure_msg_placeholder">No se pudo %s %s</string>
    <string name="success_msg_placeholder">Se acaba de %s %s</string>
    <string name="add">agregar</string>
    <string name="update">actualizar</string>
    <string name="delete">eliminar</string>
    <string name="updating_database">Actualizando la base de datos</string>
    <string name="uploading_resources">Cargando recursos</string>
    <string name="saving">Guardando</string>
    <string name="deleting">Borrando</string>
    <string name="cancel_image_upload_and_continue">Aun se está cargando la imagen. ¿Querés interrumpir la carga y guardar de todos modos?</string>
    <string name="continue_">Continuar</string>
    <string name="cook">Cocinar</string>
    <string name="delete_mayus">Eliminar</string>
    <string name="next">Siguiente</string>
    <string name="quit">Salir</string>
    <string name="previous">Anterior</string>
    <string name="recipe_must_contain_instructions_to_cook">¡La receta no tiene instrucciones para cocinar!</string>
    <string name="current_step_placeholder_extended">Paso #%d</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="delete_user">Eliminar cuenta</string>
    <string name="user_profile_picture">La imagen de perfil del usuario</string>
    <string name="account">Cuenta</string>
    <string name="couldnt_complete_operation">La operación solicitada no se pudo completar</string>
    <string name="successfully_updated_profile">Se actualizó tu perfil</string>
    <string name="error_while_updating_profile">Ocurrió un error al actualizar tu perfil</string>
    <string name="save_progress">Guardar progreso</string>
</resources>