<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/recipe_photo"
        app:srcCompat="@drawable/non_image_placeholder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_edit_image"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/edit_recipe_image"
        android:text="@string/edit"
        android:visibility="gone"
        app:icon="@drawable/ic_outline_edit_24" />

    <TextView
        android:id="@+id/no_image_added_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/click_here_to_add_image"
        android:lines="2"
        android:padding="16dp"
        android:text="@string/add_recipe_photo_image"
        android:textAlignment="center"
        android:tint="@color/colorDarkerGrey"
        app:drawableTint="#454545"
        app:drawableTopCompat="@drawable/ic_outline_camera_alt_24" />

    <ImageButton
        android:id="@+id/cancel_image_upload"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_image_loading_content_description"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_outline_clear_24" />

    <ProgressBar
        android:id="@+id/progress_bar_image_loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/circle_filter"
        android:indeterminate="false"
        android:progress="0"
        android:progressTint="@android:color/white"
        android:visibility="gone" />

</FrameLayout>