<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPlainBackground"
    app:cardBackgroundColor="@color/colorPlainBackground"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageButton
            android:id="@+id/button_drag"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/drag_ingredient"
            android:tint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_drag_indicator_24" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:endIconDrawable="@drawable/ic_outline_cancel_24"
            app:endIconMode="clear_text"
            app:errorEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_delete"
            app:layout_constraintStart_toEndOf="@+id/button_drag"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/ingredient"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredient_suggestion"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_ingredient"
            android:tint="@color/colorDarkerGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_delete_outline_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>