<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPlainBackground"
    app:cardBackgroundColor="@color/colorPlainBackground"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <ImageButton
            android:id="@+id/button_drag"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/drag_instruction"
            android:tint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_drag_indicator_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutInstruction"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/instruction"
            app:endIconDrawable="@drawable/ic_outline_cancel_24"
            app:endIconMode="clear_text"
            app:errorEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_delete"
            app:layout_constraintStart_toEndOf="@+id/button_drag"
            app:layout_constraintTop_toTopOf="parent"
            tools:hint="@string/current_step_placeholder">

            <com.ekosoftware.misrecetas.util.MultilineDoneTextInputEditText
                android:id="@+id/text_input_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_instruction"
            android:tint="@color/colorDarkerGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_outline_delete_outline_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>